--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -3,5 +3,8 @@
 #-------------------
 
 
-url=http://rss.sina.com.cn/sina_all_opml.xml
-
+#url=http://rss.sina.com.cn/sina_all_opml.xml
+url=http://www.pentitugua.com/rss.xml
+tugua=http://www.pentitugua.com/rss.xml
+dbsid=autotest
+dbcontenttable=rsscontent
