--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="log4j"/>
+	<classpathentry kind="lib" path="lib/mysql-5.1.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
