add zhihu rss parser

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -6,5 +6,6 @@
 #url=http://rss.sina.com.cn/sina_all_opml.xml
 url=http://www.pentitugua.com/rss.xml
 tugua=http://www.pentitugua.com/rss.xml
+zhihu=http://www.zhihu.com/rss
 dbsid=autotest
 dbcontenttable=rsscontent
