add mac story feed

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -7,5 +7,6 @@
 url=http://www.pentitugua.com/rss.xml
 tugua=http://www.pentitugua.com/rss.xml
 zhihu=http://www.zhihu.com/rss
+macstory=http://www.macstories.net/feed/
 dbsid=autotest
 dbcontenttable=rsscontent
