add image handler

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -5,7 +5,7 @@
 
 #url=http://rss.sina.com.cn/sina_all_opml.xml
 url=http://www.pentitugua.com/rss.xml
-tugua=https://www.pentitugua.com/rss.xml
+tugua=http://www.pentitugua.com:80/rss.xml
 zhihu=http://www.zhihu.com/rss
 macstory=http://www.macstories.net/feed/
 quora=https://www.quora.com/rss
