--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -8,6 +8,6 @@ url=http://www.pentitugua.com/rss.xml
 tugua=http://www.pentitugua.com:80/rss.xml
 zhihu=http://www.zhihu.com/rss
 macstory=http://www.macstories.net/feed/
-quora=http://www.quora.com:80/rss
+quora=https://www.quora.com:443/rss
 dbsid=autotest
 dbcontenttable=rsscontent
