add image handler

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -9,5 +9,8 @@ tugua=http://www.pentitugua.com:80/rss.xml
 zhihu=http://www.zhihu.com/rss
 macstory=http://www.macstories.net/feed/
 quora=https://www.quora.com:443/rss
+idealife=http://www.toodaylab.com/feed
+songshu=http://songshuhui.net/feed
+ifan=http://www.ifanr.com/feed
 dbsid=autotest
 dbcontenttable=rsscontent
