add image handler

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -12,5 +12,6 @@ quora=https://www.quora.com:443/rss
 idealife=http://www.toodaylab.com/feed
 songshu=http://songshuhui.net/feed
 ifan=http://www.ifanr.com/feed
+smzdm=http://feed.smzdm.com/
 dbsid=autotest
 dbcontenttable=rsscontent
