modify image pattern util

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -13,5 +13,7 @@ idealife=http://www.toodaylab.com/feed
 songshu=http://songshuhui.net/feed
 ifan=http://www.ifanr.com/feed
 smzdm=http://feed.smzdm.com/
+smashmagz=https://www.smashingmagazine.com/feed/
+penti=http://www.dapenti.com/blog/rss2.asp?name=xilei
 dbsid=autotest
 dbcontenttable=rsscontent
