--- a/log4j/log4j.properties
+++ b/log4j/log4j.properties
@@ -1,15 +1,5 @@
 log4j.rootLogger=INFO, stdout
-
-#Debug logging
-log4j.appender.DebugAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.DebugAppender.Threshold=DEBUG
-log4j.appender.DebugAppender.File=activityLog.log
-log4j.appender.DebugAppender.MaxFileSize=200KB
-log4j.appender.DebugAppender.MaxBackupIndex=5
-log4j.appender.DebugAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.DebugAppender.layout.ConversionPattern=%d{DATE} %t - %m%n
-
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}: %m%n
