fix image pattern; add 2 new rss

--- a/resources/resource.properties
+++ b/resources/resource.properties
@@ -15,5 +15,7 @@ ifan=http://www.ifanr.com/feed
 smzdm=http://feed.smzdm.com/
 smashmagz=https://www.smashingmagazine.com/feed/
 penti=http://www.dapenti.com/blog/rss2.asp?name=xilei
+geekpark=http://www.geekpark.net/rss
+whoshipm=http://www.woshipm.com/feed
 dbsid=autotest
 dbcontenttable=rsscontent
